# voxscribe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  cliff.toml  dist-workspace.toml  justfile  mise.toml  package.json
.config/: lefthook.json
.github/workflows/: ci.yml  release.yml
src/: audio.rs  cli.rs  error.rs  main.rs  output.rs  transcribe.rs
