[package]
name = "voxscribe"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/robdefeo/voxscribe"
homepage = "https://github.com/robdefeo/voxscribe"
description = "Offline audio transcription using local Whisper models"
license = "MIT"

[[bin]]
name = "voxscribe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
whisper-rs = { version = "0.16", features = ["tracing_backend"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "ogg", "vorbis", "flac", "wav", "isomp4"] }
rubato = "0.16"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hf-hub = "0.3"

[dev-dependencies]
tempfile = "3"
hound = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
